(lang dune 3.10)

(name AlgoServer)

(generate_opam_files true)

(source
 (github AidanTilgner/AlgoServer))

(authors "Aidan Tilgner")

(maintainers "Aidan Tilgne")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name AlgoServer)
 (synopsis "A simple server with endpoints for various algorithm and data structure implementations")
 (description "A simple server with endpoints for various algorithm and data structure implementations, written in OCaml")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
